syntax = "proto3";
package rustchat;

service ChatRoom {
  rpc Login(LoginRequest) returns (LoginReply);
  rpc SendMessage(SendMessageRequest) returns (SendMessageReply);
  rpc TestStream(TestStreamRequest) returns (stream TestStreamReply);
  rpc GetMessageStream(GetMessageStreamRequest) returns (stream GetMessageStreamReply);
}

message LoginRequest {
  string username = 1;
}

message LoginReply {
  bool ok = 1;
}

message SendMessageRequest {
  string username = 1;
  string message = 2;
}

message SendMessageReply {
  bool ok = 1;
}

message TestStreamRequest {
  string message = 1;
}

// streams the characters of the input -> client
message TestStreamReply {
  string character = 1;
}

message GetMessageStreamRequest {
  uint32 cursor = 1;
}

message GetMessageStreamReply {
  string message = 1;
}
